# shelf-genius

./: .gitignore  README.md  pyproject.toml  tree.txt
.github/workflows/: ci.yml  release.yml
src/shelf-genius/: main.py  shelf-genius-state.py
src/shelf-genius/nodes/: process_image_node.py
src/shelf-genius/workflow/: __init__.py
src/shelf_genius/: __init__.py  main.py
src/shelf_genius/models/: __init__.py  shelf_genius_state.py
src/shelf_genius/nodes/: book_lookup_node.py  book_recognition_node.py  book_recommendation_node.py  process_image_node.py
tests/: __init__.py  test_book_recognition_node.py  test_package.py  test_process_image_node.py
